# th0jensen-portfolio

./: .gitignore  Cargo.toml  LICENSE  data.ts  deno.json  fresh.config.ts  fresh.gen.ts  manifest.ts  tailwind.config.ts
.github/workflows/: deploy.yml
.zed/: settings.json  tasks.json
components/: ComponentLayout.tsx  Footer.tsx  Header.tsx  Hero.tsx  LangList.tsx  LayoutWrapper.tsx  Name.tsx
components/experience/: layout.tsx  page.tsx
components/hero/: layout.tsx  page.tsx
components/projects/: layout.tsx  page.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  timeline.tsx
components/work/: layout.tsx  page.tsx
islands/: AboutMe.tsx  Bio.tsx  Entry.tsx  Header.tsx  InfoCard.tsx  WasmCanvas.tsx
lib/data/: en.ts  types.ts
lib/wasm/: rs_lib.d.ts  rs_lib.js
routes/: _404.tsx  _app.tsx  _layout.tsx  index.tsx
routes/wasm/: [...path].ts  [path].ts
rs_lib/: Cargo.toml  build.rs
rs_lib/src/: lib.rs
static/: darkMode.js  styles.css
