[package]
name = "rs_lib"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "webgl2",
] }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.61", features = ["Document", "Window", "Element"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (including Bevy), but not for our code:
[profile.release]
opt-level = 3

# Optimize for WASM
[profile.release.package.rs_lib]
opt-level = "z"
